<resources>
    <string name="app_name">RP</string>
    <string name="vacation_date">Date</string>
    <string name="vacation_reason">Note</string>
    <string name="send_vacation_request">Send Vacation Request</string>
    <string name="send_transfer_request">Send transfer Request</string>
    <string name="send">Send</string>
    <string name="check_in_out">Check In/Out</string>
    <string name="vacation_request">Vacation Request</string>
    <string name="vacation_days">Days</string>
    <string name="vacations_log">Vacations Log</string>
    <string name="vacation_requests">Vacation Requests</string>
    <string name="employee_id">Employee ID</string>
    <string name="employee_name">Employee Name</string>
    <string name="accept_request">Accept</string>
    <string name="Decline_request">Decline</string>
    <string name="openNavBar">Open navigation drawer</string>
    <string name="closeNavBar">Close navigation drawer</string>
    <string name="title_activity_test">test</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="name">Name</string>
    <string name="allowance_type">Type</string>
    <string name="good_morning">Good morning,</string>
    <string name="change_password">Change Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="No">No</string>
    <string name="Yes">Yes</string>
    <string name="company_name">Company Name</string>
    <string name="company_email">Company Email</string>
    <string name="company_phone_number">Company Phone Number</string>
    <string name="start_date">Start Date of use</string>
    <string name="Done">Done</string>
    <string name="comment">Comment</string>
    <string name="gross_salary">Gross Salary</string>
    <string name="reason_for">Reason For:</string>
    <string name="_0_00">0.00 EGP</string>
    <string name="project_name">Project Name</string>
    <string name="project_reference">Project Reference</string>
    <string name="project_allowances">Project Allowances</string>
    <string name="update">Update</string>
    <string name="project_summary">Project Summary</string>
    <string name="do_you_want_to_confirm_this_action">Do you want to confirm this action?</string>
    <string name="you_are_checking_in_to_that_do_you_want_to_confirm_this_action">You are checking in to %s, do you want to confirm?</string>
    <string name="you_are_rechecking_in_to_that_do_you_want_to_confirm_this_action">You are re-checking in to %s, do you want to confirm?</string>
    <string name="you_are_checking_out_to_that_do_you_want_to_confirm_this_action">You are checking out from %s, do you want to confirm?</string>
    <string name="Comment">Comment</string>
    <string name="Mount">Mount</string>
    <string name="SupplementName">Name</string>
    <string name="AreUSure">Are You sure?</string>
    <string name="Delete">Delete</string>
    <string name="cancel">No</string>
    <string name="Note">Note</string>
    <string name="penalty">Retention</string>
    <string name="transfer_requests">Transfer Requests</string>
    <string name="transfer_note">Transfer Note</string>
    <string name="to_project_reference_name">To Project Reference | Name</string>
    <string name="from_project_reference_name">From Project Reference | Name</string>
    <string name="employee_id_name">Employee Id | Name</string>
    <string name="ChangePassword">Change Password</string>
    <string name="perDay">Per Day</string>
    <string name="gift">Bonus</string>
    <string name="date_is_inaccurate">Date is inaccurate</string>
    <string name="adjust_date">Adjust Date</string>
    <string name="month">Month</string>
    <string name="note">Note:</string>
    <string name="allowance_name">Allowance name</string>
    <string name="unpaid_days">Unpaid Days</string>
    <string name="currency">Currency</string>
    <string name="company">Company</string>
    <string name="employee">Employee</string>
    <string name="defaultTime">0 Hours</string>

    <string name="vacation_request_channel_name">Vacation Requests</string>
    <string name="vacation_request_channel_description">get notified when employees send vacation requests</string>

    <string name="vacation_status_channel_name">Vacation Status</string>
    <string name="vacation_status_channel_description">get notified when vacation request is accepted or declined</string>

    <string name="transfer_request_channel_name">Transfer Requests</string>
    <string name="transfer_request_channel_description">get notified when managers send transfer requests</string>

    <string name="transfer_status_channel_name">Transfer Status</string>
    <string name="employee_transfer_status_channel_description">get notified when transferred to another project</string>
    <string name="manager_transfer_status_channel_description">get notified when transfer request is accepted or declined</string>
    <string name="project">Project</string>

    <string name="shift_notification">Shift end</string>
    <string name="shift_notification_channel_description">notify users to checkout from their projects</string>


</resources>