<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Dialogs.AllowanceInfoDialog">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout_AllowanceType"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/vhigh"
            android:layout_marginEnd="@dimen/vhigh"
            android:layout_marginTop="@dimen/vhigh"
            android:enabled="true"
            app:boxBackgroundMode="outline"
            app:endIconMode="dropdown_menu"
            app:helperTextEnabled="true"
            app:layout_constraintEnd_toStartOf="@id/textInputLayout_AllowanceName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <AutoCompleteTextView
                android:id="@+id/TextInput_AllowanceType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/allowance_type"
                android:inputType="none"
                android:padding="14dp"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout_AllowanceName"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/vhigh"
            android:layout_marginTop="@dimen/vhigh"
            app:boxBackgroundMode="outline"
            android:visibility="gone"
            app:layout_constraintStart_toEndOf="@id/textInputLayout_AllowanceType"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/textInputLayout_AllowanceType">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/TextInput_AllowanceName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:inputType="text"
                android:padding="14dp"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout_AllowanceMount"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="@dimen/vhigh"
            android:layout_marginTop="@dimen/mid"
            app:boxBackgroundMode="outline"
            app:endIconMode="clear_text"
            app:endIconTint="@color/primaryColor"
            app:helperTextEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textInputLayout_AllowanceType"
            app:suffixText="£">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/TextInput_AllowanceMount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Mount"
                android:inputType="numberDecimal"
                android:padding="14dp"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout_AllowanceNote"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="@dimen/mid"
            android:layout_marginEnd="32dp"
            app:boxBackgroundMode="outline"
            app:helperTextEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textInputLayout_AllowanceMount">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/TextInput_AllowanceNote"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Note"
                android:padding="14dp"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_Done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/high"
            android:layout_marginBottom="32dp"
            android:text="@string/Done"
            android:textAllCaps="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textInputLayout_AllowanceNote" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>